--- a/index.html
+++ b/index.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
-<html ng-app="sapuApp" ng-controller="mainCtrl">
+<html ng-app="sapuApp" >
     <head>
         <title>SAPU APP</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="vendors/bootstrap-4.0.0-beta.3-dist/css/bootstrap.css" rel="stylesheet" type="text/css"/>
         <link href="vendors/bootstrap-4.0.0-beta.3-dist/css/bootstrap-grid.css" rel="stylesheet" type="text/css"/>
+        <!--<link rel="stylesheet" type="text/css" href="http://ui-grid.info/release/ui-grid.min.css">-->
         <link href="css/style.css" rel="stylesheet" type="text/css"/>
+        <link href="css/font-awesome.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
         <header ng-include="'template/header.html'"></header>
         <div class="container-fluid">
             <div class="row flex-xl-nowrap">
-                <div class="col-12 col-md-3 col-xl-2 bd-sidebar">
+                <div class="col-12 col-md-2 col-xl-2 col-lg-2 bd-sidebar">
                     <div ng-include="'template/sidebar.html'"></div>
                 </div>
-                <div class="col-xl-9 col-md-9 col-sm-12 bd-content">
+                <div class="col-xl-10 col-md-10 col-lg-10 bd-content">
                     <div ng-view></div>
                 </div>
             </div>
@@ -26,7 +28,19 @@
         <script src="js/app.js" type="text/javascript"></script>
         <script src="js/config.js" type="text/javascript"></script>
         <script src="controller/main.js" type="text/javascript"></script>
+        <script src="controller/helth.js" type="text/javascript"></script>
+        <script src="controller/birth.js" type="text/javascript"></script>
+        <script src="controller/dashboard.js" type="text/javascript"></script>
+        <script src="controller/surveyor.js" type="text/javascript"></script>
         <script src="vendors/bootstrap-4.0.0-beta.3-dist/js/popper.min.js" type="text/javascript"></script>
         <script src="vendors/bootstrap-4.0.0-beta.3-dist/js/bootstrap.js" type="text/javascript"></script>
+
+        <!--<script src="vendors/angular/uigrid/csv.js"></script>
+        <script src="vendors/angular/uigrid/pdfmake.js"></script>
+        <script src="vendors/angular/uigrid/vfs_fonts.js"></script>
+        <script src="vendors/angular/uigrid/lodash.min.js"></script>
+        <script src="vendors/angular/uigrid/jszip.min.js"></script>
+        <script src="vendors/angular/uigrid/excel-builder.dist.js"></script>
+        <script src="vendors/angular/uigrid/ui-grid.js"></script>-->
     </body>
 </html>
