--- a/login.html
+++ b/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="sapuApp" ng-controller="loginCtrl">
     <head>
-        <title>TODO supply a title</title>
+        <title>Login</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="vendors/bootstrap-4.0.0-beta.3-dist/css/bootstrap.css" rel="stylesheet" type="text/css"/>
@@ -33,13 +33,25 @@
                 </div>
             </div>
         </section>
+
         
         <script src="js/jquery-3.2.1.min.js" type="text/javascript"></script>
         <script src="vendors/angular/angular.min.js"></script>
+
+
         <script src="js/app.js" type="text/javascript"></script>
-        <script src="vendors/angular/angular-route.js" type="text/javascript"></script>
         <script src="js/config.js" type="text/javascript"></script>
         <script src="controller/login.js" type="text/javascript"></script>
+        <script src="vendors/angular/angular-route.js" type="text/javascript"></script>
+
+         <script src="vendors/angular/uigrid/csv.js"></script>
+    <script src="vendors/angular/uigrid/pdfmake.js"></script>
+    <script src="vendors/angular/uigrid/vfs_fonts.js"></script>
+    <script src="vendors/angular/uigrid/lodash.min.js"></script>
+    <script src="vendors/angular/uigrid/jszip.min.js"></script>
+    <script src="vendors/angular/uigrid/excel-builder.dist.js"></script>
+    <script src="vendors/angular/uigrid/ui-grid.js"></script>
+       
         <script src="vendors/bootstrap-4.0.0-beta.3-dist/js/popper.min.js" type="text/javascript"></script>
         <script src="vendors/bootstrap-4.0.0-beta.3-dist/js/bootstrap.js" type="text/javascript"></script>
     </body>
