--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
         <script src="controller/birth.js" type="text/javascript"></script>
         <script src="controller/dashboard.js" type="text/javascript"></script>
         <script src="controller/surveyor.js" type="text/javascript"></script>
+        <script src="controller/karyakram_vyavasthapan.js" type="text/javascript"></script>
+        <script src="controller/arogyatapasni.js" type="text/javascript"></script>
+        <script src="controller/balak_janm.js" type="text/javascript"></script>
+        <script src="controller/arogyaabhipray.js" type="text/javascript"></script>
         <script src="vendors/bootstrap-4.0.0-beta.3-dist/js/popper.min.js" type="text/javascript"></script>
         <script src="vendors/bootstrap-4.0.0-beta.3-dist/js/bootstrap.js" type="text/javascript"></script>
 
@@ -42,5 +46,8 @@
         <script src="vendors/angular/uigrid/jszip.min.js"></script>
         <script src="vendors/angular/uigrid/excel-builder.dist.js"></script>
         <script src="vendors/angular/uigrid/ui-grid.js"></script>-->
+        
+        <!--Modal code-->
+        <div ng-include="'template/modal_balak.html'"></div>
     </body>
 </html>
